--- a/xorg_conf_files/00-keyboard.conf
+++ b/xorg_conf_files/00-keyboard.conf
@@ -1,6 +1,7 @@
 Section "InputClass"
-	Identifier "system-keyboard"
-	MatchIsKeyboard "on"
-	Option "XkbLayout" "fr"
-	Option "XkbModel" "pc"
+  Identifier "system-keyboard"
+  MatchIsKeyboard "on"
+  Option "XkbLayout" "fr"
+  Option "XkbModel" "pc"
+  Option "XKbOptions" "ctrl:nocaps"
 EndSection
