--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -30,7 +30,7 @@ window:
   # must be at least `2`, while using a value of `0` for columns and lines will
   # fall back to the window manager's recommended size.
   dimensions:
-    columns: 80
+    columns: 67 # 66-characters line (padding spaces subtracted)
     lines: 24
 
   # Window position (changes require restart)
