--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -148,7 +148,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 12
+# corner-radius = 14
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
@@ -169,7 +169,7 @@ blur-method = "dual_kawase"
 #
 # blur-deviation = false
 #
-blur-strength = 5
+blur-strength = 4
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
@@ -202,6 +202,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
+  "class_g ?= 'slop'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
