--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -12,10 +12,10 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 14;
+shadow-radius = 11;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .60
+shadow-opacity = 0.60
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
@@ -154,7 +154,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'splash'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
+  "window_type = 'tooltip'"
 ];
 
 
