--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -148,14 +148,15 @@ focus-exclude = [ "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-# corner-radius = 14
+corner-radius = 14
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'splash'",
   "window_type = 'desktop'",
-  "window_type = 'tooltip'"
+  "window_type = 'tooltip'",
+  "class_g ?= 'dmenu'"
 ];
 
 
