--- a/xmobar/stack.yaml
+++ b/xmobar/stack.yaml
@@ -1,5 +1,5 @@
-# ghc 8.8.3
-resolver: lts-16.0
+# ghc 8.10.7
+resolver: lts-18.20
 
 packages:
  - .
@@ -8,12 +8,15 @@ flags:
  xmobar:
    with_dbus: true
    with_threaded: true
-   with_utf8: true
-   with_xft: true
+   with_xrender: true
 
 extra-deps:
  - netlink-1.1.1.0
  - libmpd-0.9.2.0
+ - cairo-0.13.8.2
+ - pango-0.13.8.2
+ - glib-0.13.8.2
+ - gtk2hs-buildtools-0.13.8.3
 nix:
     packages:
       - alsaLib
