--- a/.config/bottom/bottom.toml
+++ b/.config/bottom/bottom.toml
@@ -127,28 +127,27 @@ network_use_bytes = true
 # All widgets must have the type value set to one of ["cpu", "mem", "proc", "net", "temp", "disk", "empty"].
 # All layout components have a ratio value - if this is not set, then it defaults to 1.
 # The default widget layout:
-#[[row]]
-#  ratio=30
-#  [[row.child]]
-#  type="cpu"
-#[[row]]
-#    ratio=40
-#    [[row.child]]
-#      ratio=4
-#      type="mem"
-#    [[row.child]]
-#      ratio=3
-#      [[row.child.child]]
-#        type="temp"
-#      [[row.child.child]]
-#        type="disk"
-#[[row]]
-#  ratio=30
-#  [[row.child]]
-#    type="net"
-#  [[row.child]]
-#    type="proc"
-#    default=true
+[[row]]
+ ratio=30
+ [[row.child]]
+ type="mem"
+ [[row.child]]
+ type="disk"
+[[row]]
+   ratio=40
+   [[row.child]]
+     ratio=5
+     type="cpu"
+   [[row.child]]
+     ratio=3
+     type="temp"
+[[row]]
+ ratio=30
+ [[row.child]]
+   type="net"
+ [[row.child]]
+   type="proc"
+   default=true
 
 # Filters - you can hide specific temperature sensors, network interfaces, and disks using filters.  This is admittedly
 # a bit hard to use as of now, and there is a planned in-app interface for managing this in the future:
@@ -166,12 +165,12 @@ network_use_bytes = true
 #case_sensitive = false
 #whole_word = false
 
-#[temp_filter]
-#is_list_ignored = true
-#list = ["cpu", "wifi"]
-#regex = false
-#case_sensitive = false
-#whole_word = false
+[temp_filter]
+is_list_ignored = true
+list = ["AUXTIN.*", "CPUTIN", "PCH_.*", "PECI.*", "SYSTIN", "TSI.*"]
+regex = true
+case_sensitive = false
+whole_word = false
 
 #[net_filter]
 #is_list_ignored = true
