remove losevka config

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,9 @@
 [Settings]
 gtk-icon-theme-name = Paper
-gtk-theme-name = Adapta-Nokto
-gtk-font-name = Roboto 12
 gtk-cursor-theme-name = Paper
+gtk-theme-name = Materia-dark
+gtk-font-name = Roboto 12
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
