--- a/systemd_unit/suspend@.service
+++ b/systemd_unit/suspend@.service
@@ -6,8 +6,8 @@ Before=sleep.target
 User=%I
 Type=forking
 Environment=DISPLAY=:0
-ExecStart=/home/pierre/.local/bin/lock.sh
-ExecStartPost=/usr/bin/sleep 1
+ExecStart=/home/pierre/.local/bin/lock.sh nofork
+ExecStartPost=/usr/bin/sleep 2
 
 [Install]
 WantedBy=sleep.target
