wezterm: cfg update

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -156,6 +156,7 @@ rounded-corners-exclude = [
   "window_type = 'splash'",
   "window_type = 'desktop'",
   "window_type = 'tooltip'",
+  "class_g ?= 'peek'",
   "class_g ?= 'dmenu'"
 ];
 
@@ -205,6 +206,7 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "class_g ?= 'slop'",
+  "class_g ?= 'peek'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -226,6 +228,9 @@ backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
+# ⚠ there are issues with NVIDIA driver
+# see https://github.com/yshui/picom/issues/1168
+# see https://github.com/yshui/picom/issues/1288
 vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
