--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,8 @@
 	name = pierre
 [pull]
 	rebase = true
+[push]
+  autoSetupRemote = true
 [init]
 	defaultBranch = main
 [merge]
@@ -25,6 +27,7 @@
 [tig "bind"]
   generic = <Ctrl-k>	move-half-page-up
   generic = <Ctrl-j>	move-half-page-down
+  generic = d >git show %(commit)
 [tig "color"]
   cursor = white blue bold
   title-focus = white default bold
@@ -34,6 +37,7 @@
   delimiter = 8 default
   status = 8 default
 [delta]
+  dark                          = true
   navigate                      = true
   syntax-theme                  = Nord
   minus-style                   = white "#713a3f"
@@ -61,9 +65,10 @@
   wrap-left-symbol              = ¬
   line-numbers                  = true
   max-line-length               = 512
-  line-numbers-left-format      = {nm:^4}╎
+  line-numbers-left-format      = {nm:>2}│
   line-numbers-left-style       = black
   line-numbers-right-style      = black
+  line-numbers-right-format     = {np:>2}│
   line-numbers-minus-style      = red
   line-numbers-zero-style       = black
   line-numbers-plus-style       = green
