add notes for dual boot windows efi

--- a/xsessions/dwm.desktop
+++ b/xsessions/dwm.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=dwm
-Comment=dynamic window manager
+Comment=WM
 Type=Application
 Exec=/home/pierre/.local/bin/launch_dwm.sh
 TryExec=dwm
