--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-icon-theme-name = Paper
+gtk-icon-theme-name = Papirus
 gtk-cursor-theme-name = Paper
 gtk-theme-name = Materia-dark
 gtk-font-name = Roboto 12
