various config changes

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,7 @@
 [Settings]
 gtk-icon-theme-name = Papirus
-gtk-cursor-theme-name = Paper
+gtk-cursor-theme-name = XCursor-Pro-Dark
+gtk-cursor-theme-size = 72
 gtk-theme-name = Materia-dark
 gtk-font-name = Roboto 12
 gtk-xft-antialias=1
