--- a/lightdm/lightdm-gtk-greeter.conf
+++ b/lightdm/lightdm-gtk-greeter.conf
@@ -1,15 +1,16 @@
 [greeter]
 theme-name = Materia-dark
-icon-theme-name = Paper
-font-name = JetBrains Mono SZ Bold Italic 14
-background = /usr/share/backgrounds/samuel-ferrara-dKJXkKCF2D8-unsplash.jpg
-cursor-theme-name = Paper
+icon-theme-name = Papirus-Dark
+cursor-theme-name = XCursor-Pro-Dark
+cursor-theme-size = 72
+font-name = JetBrains Mono SZ Bold Italic 12
 user-background = false
-hide-user-image = true
-indicators = ~host;~spacer;~session;~clock;~separator;~power
-clock-format = %A, %H:%M
 xft-antialias = true
-xft-dpi = 120
+xft-dpi = 168
 xft-hintstyle = hintfull
 xft-rgba = rgb
+clock-format = %A, %H:%M
+indicators = ~host;~spacer;~session;~clock;~separator;~power
+background = /usr/share/backgrounds/dark_ocean.png
+hide-user-image = true
 
