update picom conf

--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -25,12 +25,12 @@ shadow-opacity = 0.6
 # The left offset for shadows, in pixels.
 #
 # Default: -15
-shadow-offset-x = -16;
+shadow-offset-x = -14;
 
 # The top offset for shadows, in pixels.
 #
 # Default: -15
-shadow-offset-y = -12;
+shadow-offset-y = -14;
 
 # Hex string color value of shadow. Formatted like "#RRGGBB", e.g. "#C0FFEE".
 #
@@ -195,7 +195,7 @@ use-ewmh-active-win = true;
 # when redirecting/unredirecting windows.
 #
 # Default: false
-unredir-if-possible = false;
+unredir-if-possible = true;
 
 # Delay before unredirecting the window, in milliseconds.
 #
@@ -302,6 +302,8 @@ rules: (
             "window_type = 'desktop' || "
             "class_g ?= 'slop'       || "
             "class_g ?= 'peek'       || "
+            "class_g ^= 'steam_app_' || "
+            "name ?= 'Dayz Launcher' || "
             "_GTK_FRAME_EXTENTS@";
     blur-background = false;
   },
@@ -316,6 +318,7 @@ rules: (
             "window_type = 'desktop' || "
             "window_type = 'tooltip' || "
             "class_g ?= 'peek'       || "
+            "name ?= 'Dayz Launcher' || "
             "class_g ?= 'dmenu'";
     corner-radius = 0;
   },
@@ -332,6 +335,8 @@ rules: (
             "name *= 'VLC'           || "
             "class_g ?= 'peek'       || "
             "class_g = 'Firefox' && argb || "
+            "class_g ^= 'steam_app_' || "
+            "name ?= 'Dayz Launcher' || "
             "_GTK_FRAME_EXTENTS@";
     shadow = false;
   },
@@ -342,7 +347,6 @@ rules: (
 )
 
 ### misc
-glx-no-stencil = true
 
 # `@include` directive can be used to include additional configuration files.
 # Relative paths are search either in the parent of this configuration file
